# Drawing-Automation

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: rules.md
docs/: PRD.md  PRD_KOREAN.md
src/: main.py
src/application/ports/: __init__.py  dxf_port.py  file_reader_port.py
src/application/services/: __init__.py  batch_processor.py  filename_generator.py  preset_manager.py
src/application/use_cases/: __init__.py  process_drawing.py
src/domain/: exceptions.py  types.py
src/domain/entities/: __init__.py  arc.py  bounding_box.py  entity.py  line.py  point.py  polyline.py
src/domain/services/: __init__.py  bridge_calculator.py  element_remover.py  entity_classifier.py  geometry_service.py  plywood_generator.py  polyline_bridge_processor.py  segment_connector.py  straight_knife_generator.py  text_generator.py
src/domain/value_objects/: __init__.py  bridge_settings.py  paper_size.py
src/infrastructure/: file_reader_factory.py
src/infrastructure/ai/: __init__.py  ai_adapter.py
src/infrastructure/dxf/: __init__.py  ezdxf_adapter.py
src/presentation/widgets/: input_panel.py  preview_widget.py
src/presentation/windows/: __init__.py  main_window.py
tests/: conftest.py
tests/application/: test_batch_processor.py  test_filename_generator.py  test_preset_manager.py  test_process_drawing_use_case.py
tests/domain/: test_bridge_calculator.py  test_element_remover.py  test_entities.py  test_entity_classifier.py  test_geometry_service.py  test_paper_size.py  test_plywood_generator.py  test_polyline.py  test_polyline_bridge_processor.py  test_segment_connector.py  test_straight_knife_generator.py  test_text_generator.py
tests/infrastructure/: test_ezdxf_adapter.py
tests/presentation/: test_main_window.py  test_preview_widget.py
테스트/: 251229 아시시(만다린아일랜드)단상자2판 수정 목형(유진).ai
